<resources>
    <string name="app_name">Something to wait</string>
    <string name="Test">Test</string>
    <string name="saveButton">Save and start countdown</string>
    <string name="Submit">Submit</string>
    <string name="Remove">Remove log</string>
    <string name="WeightKey">0.0</string>
    <string name="Kg">Kg</string>
    <string name="PlusBtn">+</string>
    <string name="Hour">Hour</string>
    <string name="Minute">Minute</string>
    <string name="Alarm">Set alarm</string>
    <string name="alert">Alarm</string>
    <string name="Time">Set time</string>
    <string name="newEntry">Edit log</string>
    <string name="Mood">Mood emoji</string>
    <string name="DrawWeight">%1$s Kg</string>
    <string name="CustomInfo">Write a custom log</string>
    <string name="weight">Weight</string>
    <string name="mood">Select today\'s mood</string>
    <string name="Calendar">Calendar</string>
    <string name="Information">Information</string>
    <string name="Settings">Settings</string>
    <string name="Data">Graphs</string>
    <string name="NinetyDays">90 days</string>
    <string name="ThirtyDays">30 days</string>
    <string name="HalfYear">180 days</string>
    <string name="Everything">All</string>
    <string name="WipeData">Remove all calendar data</string>
    <string name="MoodString">Mood</string>
    <string name="Weight">Weight</string>
    <string name="placeholderDate">January 1st</string>
    <string name="History">Log history</string>
    <string name="Names">Names for newborns</string>
    <string name="Categories">Categories</string>
    <string name="datePicker">Pick conception date</string>
    <string name="Feelings">Put your feelings</string>
    <string name="funFact"><a href="https://www.vau.fi/raskaus/nyt-vauva-kohdussasi-on-yhta-iso-kuin/">fun fact</a></string>
    <string name="Emergency">Hätäkeskus\n112</string>
    <string name="Paivystys">Päivystys\n116 117</string>
    <string name="myrkytys">Myrkytyskeskus\n0800 147 111</string>
    <string name="Neuvonta">Äidin\nLääkenouvonta\n09 4717 6500</string>
    <string name="Numbers">Numbers</string>
    <string name="Credits">Credits</string>
    <string name="Developers">Developers</string>
    <string name="DevsNames">Oscar Sihvonen\nRamiz Widad\nSatu Petäjäjärvi\nTeemu Tallskog</string>
    <string name="funFactsCredit">Fun facts</string>
    <string name="funfactLink"><a href = "https://www.vau.fi/raskaus/nyt-vauva-kohdussasi-on-yhta-iso-kuin/" >Nyt vauva kohdussasi on yhtä iso kuin…</a></string>
    <string name="funfactsCreator">Hanna Roihuvaara</string>
    <string name="BabyNames">Neutral baby names</string>
    <string name="babyNamesCredit"><a href="https://kaksplus.fi/raskaus/haaveissa-vauva/kauneimmat-sukupuolineutraalit-nimet-eeri-kaiho-selmi-ja-17-muuta-nimea-jotka-eivat-katso-sukupuolta/">Kauneimmat sukupuolineutraalit nimet</a></string>
    <string name="neutralNamesMaker">Kia Toivanen, 24.7.2020</string>
</resources>