<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_calendar"
            android:title="@string/Calendar" />
        <item
            android:id="@+id/nav_data"
            android:icon="@drawable/ic_data_analysis"
            android:title="@string/Data" />
        <item
            android:id="@+id/inputHistory"
            android:icon="@drawable/ic_baseline_history_24"
            android:title="@string/History"/>
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_info"
            android:title="@string/Information" />
        <item
            android:id="@+id/nav_names"
            android:icon="@drawable/ic_name"
            android:title="@string/Names" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/Setings" />
<<<<<<< HEAD
        <item
            android:id="@+id/nav_calls"
            android:icon="@drawable/ic_baseline_call_24"
            android:title="Numbers"/>

=======
>>>>>>> d4b40b9e5e5d164253c14ca990d20dd28e49e6e9
    </group>

</menu>