<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee"
    tools:context=".DataAnalysis">

    <com.jjoe64.graphview.GraphView
        android:id="@+id/lineChart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/DataString"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateSelectRadio"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/DataString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:layout_weight="1"
        android:fontFamily="serif"
        android:textColor="#040404"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lineChart" />

    <RadioGroup
        android:id="@+id/dateSelectRadio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@id/AllTimeRadio"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DataDisplayRadioGroup">

        <RadioButton
            android:id="@+id/ThirtyRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:textColor="#040404"
            android:text="@string/ThirtyDays" />

        <RadioButton
            android:id="@+id/NinetyRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:textColor="#040404"
            android:text="@string/NinetyDays" />

        <RadioButton
            android:id="@+id/HalfYearRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:textColor="#040404"
            android:text="@string/HalfYear" />

        <RadioButton
            android:id="@+id/AllTimeRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:textColor="#040404"
            android:checked="false"
            android:text="@string/Everything" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/DataDisplayRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@id/WeightRadioBtn"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/WeightRadioBtn"
            android:layout_width="match_parent"
            android:fontFamily="serif"
            android:textColor="#040404"
            android:layout_height="wrap_content"
            android:text="@string/Weight" />

        <RadioButton
            android:id="@+id/MoodRadioBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:textColor="#040404"
            android:text="@string/MoodString" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>