<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee"
    tools:context=".Alarm">

    <TextView
        android:id="@+id/Hour"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="128dp"
        android:autofillHints="@string/Hour"
        android:ems="10"
        android:fontFamily="serif"
        android:gravity="center"
        android:hint="@string/Hour"
        android:inputType="text"
        android:textColor="#040404"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="@+id/Minute"
        app:layout_constraintStart_toStartOf="@+id/Minute"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Minute"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginStart="96dp"
        android:layout_marginLeft="96dp"
        android:layout_marginTop="72dp"
        android:layout_marginBottom="82dp"
        android:autofillHints="@string/Minute"
        android:ems="10"
        android:fontFamily="serif"
        android:gravity="center"
        android:hint="@string/Minute"
        android:inputType="textPersonName"
        android:textColor="#040404"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="@+id/Time"
        app:layout_constraintStart_toStartOf="@+id/Time"
        app:layout_constraintTop_toTopOf="@+id/Hour"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/Alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="284dp"
        android:background="@drawable/rounded"
        android:fontFamily="serif"
        android:text="@string/Alarm"
        android:textColor="#040404"
        android:textStyle="bold"
        app:backgroundTint="#0FD1BF"
        app:layout_constraintStart_toStartOf="@+id/Minute"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="69dp"
        android:layout_marginLeft="69dp"
        android:background="@drawable/rounded"
        android:fontFamily="serif"
        android:text="@string/Time"
        android:textColor="#040404"
        android:textStyle="bold"
        app:backgroundTint="#0FD1BF"
        app:layout_constraintBaseline_toBaselineOf="@+id/Alarm"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>